Manage Request Principal view (7/10) pending to add filters

--- a/HomeHero/Views/HeroViews/Principal.cshtml
+++ b/HomeHero/Views/HeroViews/Principal.cshtml
@@ -37,8 +37,8 @@
                         <img class="img-fluid" src="~/Images/SearchRequest.png" />
                     </div>
                 </div>
-                <div onclick="location.href='@Url.Action("OfferHelp", "Home")'" class="col-lg-3 col-md-5 col-sm-10 p-5 mt-5 text-center d-flex flex-column">
-                    <h2 class="font-title pb-5">Ofrecer ayuda</h2>
+                <div onclick="location.href='@Url.Action("ManageRequest", "Home")'" class="col-lg-3 col-md-5 col-sm-10 p-5 mt-5 text-center d-flex flex-column">
+                    <h2 class="font-title pb-3">Gestionar solicitudes</h2>
                     <div class="flex-grow-1">
                         <img class="img-fluid" src="~/Images/offerhelp.png" />
                     </div>
