--- a/HomeHero/Views/HeroViews/RequestList.cshtml
+++ b/HomeHero/Views/HeroViews/RequestList.cshtml
@@ -52,7 +52,7 @@
                                         <div class="card-body">
                                             <h5 class="font-title card-title secColor fs-5">@request.RequestTitle</h5>
                                             <p class="card-text secColor fw-bold">Ubicacion: <span class="text-white fw-normal">@request.Location_Request.City</span></p>
-                                            <p class="card-text fw-bold">Heroes solicitados: <span class="fw-normal text-white">@request.MembersNeeded</span></p>
+                                            <p class="card-text fw-bold secColor">Heroes solicitados: <span class="fw-normal text-white">@request.MembersNeeded</span></p>
                                         </div>
                                     </div>
                                 </div>
