--- a/HomeHero/Views/HeroViews/_RequestComplete.cshtml
+++ b/HomeHero/Views/HeroViews/_RequestComplete.cshtml
@@ -13,7 +13,8 @@
         <p class="card-text secColor fw-bold">Heroes solicitados: <span class="text-white fw-normal">@Model.MembersNeeded</span></p>
     </div>
     <div class="card-footer text-center">
-        <form asp-action="AddPostulation" asp-controller="Home" method="get" class="mt-3">
+        <form asp-action="AddPostulation" asp-controller="Home" method="post" class="mt-3">
+            <input type="hidden" name="request" value="@Model.RequestID" />
             <label for="price" class="fw-bold secColor p-2">Precio:</label>
             <input type="number" name="price" class="p-2 filter-input w-75" placeholder="Dinero a pedir al solicitante" />
             <button type="submit" class="btn btn-outline-light mt-2" data-bs-dismiss="modal" aria-label="Close"> Postularse </button>
