--- a/HomeHero/wwwroot/css/General.css
+++ b/HomeHero/wwwroot/css/General.css
@@ -207,6 +207,62 @@ user-img:hover {
     box-shadow: 0 0 4px 1px #08192e9c;
 }
 
+.profileImg_1 {
+    width: 70%;
+    height: 300px;
+    object-fit: cover;
+    object-position: top left;
+    border-radius: 4px;
+    border: 3px solid rgb(48, 44, 44, 0.80);
+}
+
+.profileImg_2 {
+    width: 100%;
+    object-fit: cover;
+    object-position: top center;
+}
+
+.ApplicantsTitle {
+    border-bottom: 2px solid #FF9003;
+}
+
+.aplicantHeroCard {
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+    background: #d46a2c;
+    border: 1px black solid;
+    color:black;
+}
+.star-widget{
+    display:flex;
+    flex-direction:row-reverse;
+    justify-content:start;
+}
+
+.star-widget input{
+    display: none;
+}
+
+.star-widget label{
+    font-size:1.5em;
+    color:#444;
+    padding: 2px;
+    transition: all 0.2s ease;
+}
+
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label{
+    color:#1e4f91;
+}
+
+input:checked ~ label {
+    color: #1e4f91;
+}
+input:checked ~ form{
+    display:block;
+}
+
 @media screen and (min-width: 1750px) {
     .flex-column {
         height: max-content;
