--- a/HomeHero/Views/HeroViews/ManageRequest2.cshtml
+++ b/HomeHero/Views/HeroViews/ManageRequest2.cshtml
@@ -36,7 +36,7 @@
                             <h5 class="font-title card-title secColor fs-5">@request.RequestTitle</h5>
                             <p class="card-text">@request.RequestContent</p>
                             <p class="card-text secColor fw-bold">Fecha:<span class="text-white fw-normal">@request.PublicationReqDate</span> </p>
-                            <p class="card-text secColor fw-bold">Ubicacion: <span class="text-white fw-normal">city</span></p>
+                            <p class="card-text secColor fw-bold">Ubicacion: <span class="text-white fw-normal">@request.Location_Request.City</span></p>
                             <p class="card-text fw-bold secColor">Heroes solicitados: <span class="fw-normal text-white">@request.MembersNeeded</span></p>
                         </div>
                     </div>
